Fix: Correct image paths for deployment

--- a/Week.01/index.html
+++ b/Week.01/index.html
@@ -45,15 +45,15 @@
     </header>
     <main class="cards_container">
         <div class="promotion promotion-1">
-            <img src="/assets/img.webp" class="promotion-img" alt="landscape">
+            <img src="assets/img.webp" class="promotion-img" alt="landscape">
             <p>Promotion 1</p>
         </div>
         <div class="promotion promotion-2">
-            <img src="/assets/img.webp" class="promotion-img" alt="landscape">
+            <img src="assets/img.webp" class="promotion-img" alt="landscape">
             <p>Promotion 2</p>
         </div>
         <div class="promotion promotion-3">
-            <img src="/assets/img.webp" class="promotion-img" alt="landscape">
+            <img src="assets/img.webp" class="promotion-img" alt="landscape">
             <p>Promotion 3</p>
         </div>
         <div class="card card-1">
