feat: 新增第二週作業連結至index.html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <ul>
         <li><a href="./Week.01/index.html">第一週作業</a></li>
         <!-- 未來有新作業時，就加在下面 -->
+        <li><a href="./week-2/assign2.js">第二週作業</a></li>
     </ul>
 </body>
 </html>
