feat: 完成week3 task-4

--- a/week-3/index.html
+++ b/week-3/index.html
@@ -44,6 +44,7 @@
     <main class="main_container">
         <section class="promotions_container">
         </section>
+        <button class="btn_load-more">Load More</button>
     </main>
 
     <script src="script.js"></script>
